[gd_scene load_steps=11 format=3 uid="uid://dnhul56x6p4au"]

[ext_resource type="PackedScene" uid="uid://3emacmk27bj2" path="res://modeles3d/rondache.glb" id="1_xgk72"]
[ext_resource type="Script" path="res://scenes/item/rondache.gd" id="2_hrpya"]
[ext_resource type="Texture2D" uid="uid://boyf1y87wrttw" path="res://images/textures/Rust004_1K-JPG_Metalness (1).png" id="2_pekac"]
[ext_resource type="Texture2D" uid="uid://cpi8aivradthn" path="res://images/textures/4planche.png" id="3_vi7x1"]
[ext_resource type="AudioStream" uid="uid://cniey8ogy4khu" path="res://sons/shield-guard-6963.wav" id="5_l1v1h"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vdha8"]
albedo_texture = ExtResource("2_pekac")
metallic = 0.76
roughness = 0.75
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d7vsj"]
albedo_texture = ExtResource("3_vi7x1")
metallic = 0.75
roughness = 0.75
uv1_scale = Vector3(0.7, 0.7, 0.7)
uv1_triplanar = true
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_20l1e"]
albedo_texture = ExtResource("2_pekac")
metallic = 0.75
roughness = 0.75
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
texture_filter = 0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_0n6fv"]
height = 0.0477347
radius = 0.170444

[sub_resource type="CylinderShape3D" id="CylinderShape3D_pv6ug"]
height = 0.0649058
radius = 0.18919

[node name="rondache" groups=["prehensible"] instance=ExtResource("1_xgk72")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
script = ExtResource("2_hrpya")

[node name="Sph√®re" parent="." index="0"]
layers = 8
surface_material_override/0 = SubResource("StandardMaterial3D_vdha8")
surface_material_override/1 = SubResource("StandardMaterial3D_d7vsj")

[node name="Cube" parent="." index="1"]
layers = 8
material_override = SubResource("StandardMaterial3D_20l1e")

[node name="interaction_area" type="Area3D" parent="." index="2" groups=["prehensible"]]
collision_layer = 8
collision_mask = 0

[node name="interaction_form" type="CollisionShape3D" parent="interaction_area" index="0" groups=["prehensible"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000625223, 0.0260201, 0)
shape = SubResource("CylinderShape3D_0n6fv")

[node name="Rondache" type="StaticBody3D" parent="." index="3" groups=["prehensible"]]
collision_layer = 8

[node name="body_collision2" type="CollisionShape3D" parent="Rondache" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00246635, 0.0330321, 0)
shape = SubResource("CylinderShape3D_pv6ug")

[node name="audio_pick" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource("5_l1v1h")

[node name="Timer" type="Timer" parent="." index="5"]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
